clusters/CHANGE_TO_CLUSTER_NAME/configs/istio-config.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: ingress-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 443
      name: https-mtls
      protocol: HTTPS
    tls:
      mode: MUTUAL
      credentialName: federator-server-mtls
    hosts:
      - "${federator_server_domain}"
      - "hello-world.${domain}"
      - "${authorisation_api_domain}"
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
      - "*"
  - port:
      number: 443
      name: https-keycloak
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: istio-ingressgateway-cert-keycloak
    hosts:
      - "${keycloak_domain}"
  - port:
      number: 443
      name: https-data-sharing
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: istio-ingressgateway-cert-data-sharing
    hosts:
      - "${ia_domain}"
---
