clusters/CHANGE_TO_CLUSTER_NAME/configs/hello-world.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hello-world
  labels:
    app: hello-world
    istio-injection: enabled
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-world
  namespace: hello-world
  labels:
    app: hello-world
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-world
  template:
    metadata:
      labels:
        app: hello-world
    spec:
      restartPolicy: Always
      containers:
        - name: hello-world
          image: nginx:latest
          # command: [ "/label-studio/deploy/wait-for-postgres.sh", "acid-minimal-cluster", "label-studio" ]
          ports:
            - name: http
              containerPort: 80
          securityContext:
            readOnlyRootFilesystem: false
          resources:
            limits:
              cpu: "0.5"
              memory: "500Mi"
            requests:
              cpu: "0.1"
              memory: "100Mi"
          volumeMounts:
          - name: nginx-config-volume
            mountPath: /etc/nginx/conf.d/default.conf
            subPath: nginx.conf
      volumes:
      - name: nginx-config-volume
        configMap:
          name: nginx-config
---
apiVersion: v1
kind: Service
metadata:
  name: hello-world-svc
  namespace: hello-world
  annotations:
spec:
  ports:
  - name: http
    port: 8083
    targetPort: 80
  selector:
    app: hello-world
  type: ClusterIP
---
apiVersion: networking.istio.io/v1
kind: ServiceEntry
metadata:
  name: originate-mtls-for-nginx
  namespace: hello-world
spec:
  hosts:
  - hello-world.${domain}
  ports:
  - number: 80
    name: http-port
    protocol: HTTP
    targetPort: 443
  - number: 443
    name: https-port
    protocol: HTTPS
  resolution: DNS
---
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: originate-mtls-hello-world
  namespace: hello-world
spec:
  workloadSelector:
    matchLabels:
      app: hello-world
  host: hello-world.${domain}
  trafficPolicy:
    loadBalancer:
      simple: ROUND_ROBIN
    portLevelSettings:
    - port:
        number: 80
      tls:
        mode: MUTUAL
        credentialName: hello-world-mtls # this must match the secret created earlier to hold client certs, and works only when DR has a workloadSelector
        sni: hello-world.${domain}
        # subjectAltNames: # can be enabled if the certificate was generated with SAN as specified in previous section
        # - ${data_producer1_domain}
---
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: hello-world
  namespace: hello-world
spec:
  hosts:
  - "hello-world.${domain}"
  gateways:
  - istio-system/ingress-gateway
  http:
  - match:
    - uri:
        prefix: "/hello-world"
    route:
    - destination:
        host: hello-world-svc.hello-world.svc.cluster.local
        port:
          number: 8083
