clusters/CHANGE_TO_CLUSTER_NAME/configs/keycloak-config.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: keycloak
  labels:
    app: keycloak
    istio-injection: enabled
---
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: keycloak
  namespace: keycloak
spec:
  hosts:
  - ${keycloak_domain}
  gateways:
  - istio-system/ingress-gateway
  http:
  - match:
    - uri:
        prefix: "/"
    route:
    - destination:
        host: keycloak.keycloak.svc.cluster.local  # Fully qualified service name
        port:
          number: 80
