clusters/CHANGE_TO_CLUSTER_NAME/configs/monitoring.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: monitoring
  namespace: grafana
spec:
  hosts:
  - "monitoring.${domain}"
  gateways:
  - istio-system/ingress-gateway
  http:
  - match:
    - uri:
        prefix: "/"
    route:
    - destination:
        host: grafana.grafana.svc.cluster.local  # Fully qualified service name
        port:
          number: 80
---
