clusters/CHANGE_TO_CLUSTER_NAME/configs/oauth2-config.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: oauth2-proxy-external
    app.kubernetes.io/version: v7.5.1
    telicent.io/resource: "true"
  name: oauth2-proxy-external
  namespace: tc-system
spec:
  ports:
    - name: http
      port: 4080
      protocol: TCP
      targetPort: http
  selector:
    app.kubernetes.io/name: oauth2-proxy-external
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: oauth2-proxy-external
    app.kubernetes.io/version: v7.5.1
    telicent.io/resource: "true"
  name: oauth2-proxy-external
  namespace: tc-system
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app.kubernetes.io/name: oauth2-proxy-external
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: oauth2-proxy-external
        app.kubernetes.io/version: v7.5.1
        telicent.io/resource: "true"
    spec:
      containers:
        - envFrom:
            - configMapRef:
                name: oauth2-proxy-external
          image: quay.io/oauth2-proxy/oauth2-proxy:v7.5.1
          imagePullPolicy: Always
          livenessProbe:
            httpGet:
              path: /ping
              port: http
              scheme: HTTP
            initialDelaySeconds: 0
            timeoutSeconds: 1
          name: oauth2-proxy
          ports:
            - containerPort: 4080
              name: http
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /ready
              port: http
              scheme: HTTP
            initialDelaySeconds: 0
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 5
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            runAsGroup: 10101
            runAsNonRoot: true
            runAsUser: 10101
            seccompProfile:
              type: RuntimeDefault
      securityContext:
        fsGroup: 10101
        runAsGroup: 10101
        runAsNonRoot: true
        runAsUser: 10101
        seccompProfile:
          type: RuntimeDefault
      serviceAccountName: oauth2-proxy-external
---
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: oidc-login-ingress
  namespace: tc-system
spec:
  gateways:
    - istio-system/ingress-gateway
  hosts:
    - ${ia_domain}
  http:
    - match:
        - uri:
            prefix: /oauth2
      route:
        - destination:
            host: oauth2-proxy-external
            port:
              number: 4080
---
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: allow-ingress-to-external-oauth2-proxy
  namespace: tc-system
spec:
  action: ALLOW
  rules:
    - from:
        - source:
            principals:
              - cluster.local/ns/istio-system/sa/istio-gateway
      to:
        - operation:
            methods:
              - "*"
  selector:
    matchLabels:
      app.kubernetes.io/name: oauth2-proxy-external
---
apiVersion: security.istio.io/v1
kind: RequestAuthentication
metadata:
  name: authenticate-users
  namespace: istio-system
spec:
  selector:
    matchLabels:
      telicent.io/resource: "true"
  jwtRules:
  - forwardOriginalToken: true
    issuer: https://${keycloak_domain}/realms/Istio
    jwksUri: https://${keycloak_domain}/realms/Istio/protocol/openid-connect/certs
---
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: authenticate-apps
  namespace: istio-system
spec:
  action: CUSTOM
  provider:
    name: oauth2-proxy-apps
  rules:
    - to:
        - operation:
            hosts:
              - ${ia_domain}
            notHosts:
              - ${keycloak_domain}
            notPaths:
              - /realms/*
              - /realms*
              - /realms/Istio
              - /.well-known/acme-challenge/*
              - /oauth2/*
              - /oauth2
            paths:
              - /
              - /*
            
  selector:
    matchLabels:
      istio: ingressgateway
---
